--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>lab-ratchet</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
         <style>
             html, body {
                 height: 100%;
@@ -42,6 +43,12 @@
                 display: inline-block;
             }
 
+            h1 {
+                font-weight: 100;
+                font-family: 'Lato', sans-serif;
+                font-size: 48px; 
+            }
+
             .input-text {
                 height: 30px;
                 min-width: 400px;
@@ -67,6 +74,7 @@
     <body>
         <div class="container">
             <div class="content">
+                <h1>lab-chat</h1>
                 <input type="text" id="mensagem" class="input-text">
                 <button id="btnEnviar">Enviar</button>
                 <br>
